chore(Button): removed concat helper

--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -43,7 +43,7 @@
       type="button"
     {{/unless}}
   {{/if}}
-  {{#if (concat button--AriaExpanded)}}
+  {{#if button--AriaExpanded}}
     aria-expanded="{{button--AriaExpanded}}"
   {{/if}}
   {{#if button--role}}
