chore(demo): remove default aria-label from jump links toggle button

--- a/src/patternfly/components/JumpLinks/jump-links-header.hbs
+++ b/src/patternfly/components/JumpLinks/jump-links-header.hbs
@@ -4,7 +4,7 @@
   {{/if}}>
   {{#if jump-links--IsExpandable}}
     {{#> jump-links-toggle}}
-      {{#> button button--IsPlain=true button--icon-template="jump-links-toggle-icon" button--aria-label="Toggle jump links" button--IsAriaExpanded=jump-links--IsExpanded}}
+      {{#> button button--IsPlain=true button--icon-template="jump-links-toggle-icon" button--IsAriaExpanded=jump-links--IsExpanded}}
         {{#if @partial-block}}
           {{> @partial-block}}
         {{else}}
