feat(DataList,Progress,Truncate): add tabindex (#7709)

--- a/src/patternfly/components/DataList/data-list-item-row.hbs
+++ b/src/patternfly/components/DataList/data-list-item-row.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}data-list__item-row{{#if data-list-item-row--modifier}} {{data-list-item-row--modifier}}{{/if}}"
+<div class="{{pfv}}data-list__item-row{{#if data-list-item-row--IsTruncate}} pf-m-truncate{{/if}}{{#if data-list-item-row--modifier}} {{data-list-item-row--modifier}}{{/if}}"
   {{#if data-list-item-row--attribute}}
     {{{data-list-item-row--attribute}}}
   {{/if}}>
