chore(jump-links): tweak hbs to DRY up markdown file

--- a/src/patternfly/components/JumpLinks/jump-links-item.hbs
+++ b/src/patternfly/components/JumpLinks/jump-links-item.hbs
@@ -1,6 +1,10 @@
-<li class="{{pfv}}jump-links__item{{#if jump-links-item--modifier}} {{jump-links-item--modifier}}{{/if}}"
+<li class="{{pfv}}jump-links__item{{#if jump-links-item--modifier}} {{jump-links-item--modifier}}{{/if}}{{#if jump-links-item--IsCurrent}} pf-m-current{{/if}}"
   {{#if jump-links-item--attribute}}
     {{{jump-links-item--attribute}}}
-  {{/if}}>
+  {{/if}}
+  {{#if jump-links-item--IsCurrent}}
+    aria-current="location"
+  {{/if}}
+  >
   {{> @partial-block}}
 </li>
