--- a/src/patternfly/components/JumpLinks/jump-links-header.hbs
+++ b/src/patternfly/components/JumpLinks/jump-links-header.hbs
@@ -4,8 +4,12 @@
   {{/if}}>
   {{#if jump-links--IsExpandable}}
     {{#> jump-links-toggle}}
-      {{#> button button--IsPlain=true button--icon-template="jump-links-toggle-icon" button--aria-label="Toggle jump links" button--AriaExpanded=jump-links--IsExpanded}}
-        Jump to section
+      {{#> button button--IsPlain=true button--icon-template="jump-links-toggle-icon" button--IsAriaExpanded=jump-links--IsExpanded}}
+        {{#if @partial-block}}
+          {{> @partial-block}}
+        {{else}}
+          Jump to section
+        {{/if}}
       {{/button}}
     {{/jump-links-toggle}}
   {{/if}}
