--- a/src/patternfly/base/tokens/tokens-highcontrast.scss
+++ b/src/patternfly/base/tokens/tokens-highcontrast.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 02 Sep 2025 22:55:03 GMT
+// Generated on Wed, 10 Sep 2025 19:58:14 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
@@ -55,10 +55,10 @@
   --pf-t--global--breakpoint--600: 90.625rem;
   --pf-t--global--color--nonstatus--green--400: #3d7019;
   --pf-t--global--color--status--success--150: #3d7019;
-  --pf-t--global--focus-ring--position--inset: -4;
-  --pf-t--global--focus-ring--position--offset: 2;
-  --pf-t--global--focus-ring--width--inset: 3;
-  --pf-t--global--focus-ring--width--offset: 2;
+  --pf-t--global--focus-ring--position--inset: -4px;
+  --pf-t--global--focus-ring--position--offset: 2px;
+  --pf-t--global--focus-ring--width--inset: 3px;
+  --pf-t--global--focus-ring--width--offset: 2px;
   --pf-t--global--font--family--100: "Red Hat Text", "RedHatText", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif;
   --pf-t--global--font--family--200: "Red Hat Display", "RedHatDisplay", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif;
   --pf-t--global--font--family--300: "Red Hat Mono", "RedHatMono", "Courier New", Courier, monospace;
