--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -287,15 +287,15 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
     }
   }
 
-  &:hover {
+  &:hover,
+  &:focus-within {
     --#{$dual-list-selector}__list-item-row--BackgroundColor: var(--#{$dual-list-selector}__list-item-row--hover--BackgroundColor);
     --#{$dual-list-selector}__list-item-row--BorderWidth: var(--#{$dual-list-selector}__list-item-row--hover--BorderWidth);
   }
 
   &.pf-m-check {
     --#{$dual-list-selector}__list-item-row--m-selected--BackgroundColor: transparent;
-    --#{$dual-list-selector}__list-item-row--m-selected--BorderColor: transparent;
-    --#{$dual-list-selector}__list-item-row--BorderWidth: revert;
+    --#{$dual-list-selector}__list-item-row--m-selected--BorderWidth: 0;
   }
 
   &.pf-m-ghost-row {
