fix(dual-list-selector):switch to flex-grow

--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -312,7 +312,7 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 
 .#{$dual-list-selector}__item,
 .#{$dual-list-selector}__item-main {
-  flex-basis: 100%; // TODO
+  flex-grow: 1;
 }
 
 .#{$dual-list-selector}__draggable {
